Convert MealPlan to dumb component

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "nodemon server/index.js",
-    "webpack": "webpack --mode development",
+    "webpack": "webpack --mode development --watch",
     "build": "webpack --mode production"
   },
   "devDependencies": {
